--- a/components/awc-img/awc-img.html
+++ b/components/awc-img/awc-img.html
@@ -262,8 +262,7 @@
         <div id="alt"></div>
     </div>
 </div>
-<awc-icon class="view" name='View'></awc-icon>
-<img>
+<img />
 <div class="loading">
     <div class="animation">
         <div class="shape shape1"></div>
