--- a/components/awc-dropdown/awc-dropdown.html
+++ b/components/awc-dropdown/awc-dropdown.html
@@ -115,7 +115,7 @@
         display: none;
         box-sizing: border-box;
         width: 100%;
-        content: '没有匹配到任何选项';
+        content: 'Did not match any options';
         padding: .25em .625em;
         line-height: 1.8;
         color: var(--fontColor, #333);
