--- a/components/awc-popover/awc-popbody.html
+++ b/components/awc-popover/awc-popbody.html
@@ -78,3 +78,8 @@
         padding: 0;
     }
 </style>
+<div class="popbody-content" id="popbody-content">
+    <div class="popbody-body">
+        <slot></slot>
+    </div>
+</div>
