--- a/components/awc-tooltip/awc-tooltip.html
+++ b/components/awc-tooltip/awc-tooltip.html
@@ -14,7 +14,7 @@
         transform: translate(-50%, -20px);
         opacity: 0;
         transition: all .15s .15s, left 0s, top 0s;
-        color: var(--grayColor, rgba(0, 0, 0, 0.75));
+        color: var(--color, rgba(0, 0, 0, 0.75));
         visibility: hidden;
         pointer-events: none;
     }
@@ -25,7 +25,7 @@
         padding: 6px 10px;
         line-height: 18px;
         text-align: left;
-        background-color: var(--grayColor, rgba(0, 0, 0, 0.75));
+        background-color: var(--color, rgba(0, 0, 0, 0.75));
         color: #fff;
         font-size: 12px;
         font-style: normal;
