--- a/components/awc-loading/awc-loading.html
+++ b/components/awc-loading/awc-loading.html
@@ -4,7 +4,7 @@
         display: inline-flex;
         align-items: center;
         justify-content: center;
-        color: var(--themeColor, #42b983);
+        color: var(--themeColor, #307fe2);
     }
 
     .loading {
