--- a/components/awc-message/awc-message.html
+++ b/components/awc-message/awc-message.html
@@ -19,12 +19,12 @@
         margin-top: 10px;
         align-items: center;
         font-size: 14px;
-        color: #666;
-        background: #fff;
+        color: var(--fontColor);
+        background: var(--colorWhite);
         border-radius: 3px;
         transform: translateY(-100%);
         transition: .3s transform cubic-bezier(.645, .045, .355, 1);
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+        box-shadow: 0 4px 12px var(--boxShadow);
         pointer-events: all;
     }
 
@@ -49,7 +49,7 @@
     }
 
     :host awc-icon {
-        color: var(--themeColor, #42b983);
+        color: var(--themeColor, #307fe2);
     }
 </style>
 <div class="message">
