--- a/components/awc-option/awc-option.html
+++ b/components/awc-option/awc-option.html
@@ -12,11 +12,11 @@
         justify-content: flex-start;
         border-radius: 0;
         font-size: inherit;
-        padding-left: var(--paddingLeft, .625em);
+        padding-left: var(--em-625, .625em);
     }
 
     :host([selected]) .option {
-        color: var(--themeColor, #42b983)
+        color: var(--themeColor, #307fe2)
     }
 </style>
 <awc-button id="option" class="option" type="text">
