--- a/components/awc-pagination/awc-pagination.html
+++ b/components/awc-pagination/awc-pagination.html
@@ -15,7 +15,7 @@
 
     .simple-page {
         width: auto;
-        padding: 0 .625em;
+        padding: 0 var(--em-625);
     }
 
     awc-button[tabindex] {
@@ -25,9 +25,9 @@
     }
 
     awc-button[current] {
-        background: var(--themeBackground, var(--themeColor, #42b983));
-        border-color: var(--themeColor, #42b983);
-        color: #fff;
+        background: var(--themeColor, #307fe2);
+        border-color: var(--themeColor, #307fe2);
+        color: var(--colorWhite);
     }
 
     .page {
