--- a/components/awc-tabs/awc-tabs.html
+++ b/components/awc-tabs/awc-tabs.html
@@ -30,7 +30,7 @@
     }
 
     :host(:not([type="line"])) .nav-item.active {
-        color: var(--themeColor, #42b983);
+        color: var(--themeColor, #307fe2);
     }
 
     .tab-line {
@@ -39,7 +39,7 @@
         margin-top: -2px;
         height: 2px;
         border-radius: 2px;
-        background: var(--themeColor, #42b983);
+        background: var(--themeColor, #307fe2);
         transition: .2s;
     }
 
@@ -71,7 +71,7 @@
 
     :host([type="card"]) .nav-item.active,
     :host([type="card"]) .tab-content {
-        background-color: #fff;
+        background-color: var(--colorWhite);
     }
 
     :host([type="line"]) .nav-item.active {
