--- a/components/awc-tooltip/awc-tooltip.html
+++ b/components/awc-tooltip/awc-tooltip.html
@@ -26,7 +26,7 @@
         line-height: 18px;
         text-align: left;
         background-color: var(--color, rgba(0, 0, 0, 0.75));
-        color: #fff;
+        color: var(--colorWhite);
         font-size: 12px;
         font-style: normal;
         width: max-content;
