--- a/components/awc-dialog/awc-dialog.html
+++ b/components/awc-dialog/awc-dialog.html
@@ -7,7 +7,7 @@
         right: 0;
         bottom: 0;
         z-index: -1;
-        background: var(--shadowBackground, rgba(0, 0, 0, .3));
+        background: var(--boxShadow, rgba(0, 0, 0, .3));
         visibility: hidden;
         opacity: 0;
         transition: .3s;
@@ -29,7 +29,7 @@
         max-width: calc(100vw - 20px);
         max-height: calc(100vh - 20px);
         border-radius: 3px;
-        background-color: #fff;
+        background-color:  var(--colorWhite);
         opacity: 0;
         transform: scale(0.5);
         transition: .3s cubic-bezier(.645, .045, .355, 1);
