--- a/components/awc-popover/awc-popbody.html
+++ b/components/awc-popover/awc-popbody.html
@@ -10,7 +10,7 @@
         z-index: 10;
         transition: .3s cubic-bezier(.645, .045, .355, 1);
         transform-origin: inherit;
-        background: #fff;
+        background: var(--colorWhite);
         visibility: hidden;
     }
 
@@ -27,8 +27,8 @@
         line-height: 30px;
         padding: 15px 30px 0 0;
         font-weight: 700;
-        font-size: 14px;
-        color: #4c5161;
+        font-size: var(--fontSize14);
+        color: var(--fontColor);
         user-select: none;
         cursor: default;
     }
