--- a/components/awc-radio/awc-radio.html
+++ b/components/awc-radio/awc-radio.html
@@ -23,8 +23,7 @@
 
     :host(:focus-within) .cheked,
     :host(:not([disabled])) label:hover .cheked {
-        border-color: var(--themeColor, #42b983);
-        /*box-shadow: 0 0 10px rgba(0,0,0,0.1);*/
+        border-color: var(--themeColor, #307fe2);
         z-index: 1;
     }
 
@@ -62,7 +61,7 @@
         height: 8px;
         margin: auto;
         border-radius: 50%;
-        background: var(--themeColor, #42b983);
+        background: var(--themeColor, #307fe2);
         transform: scale(0);
         transition: .2s cubic-bezier(.12, .4, .29, 1.46) .1s;
     }
@@ -72,7 +71,7 @@
         content: '';
         width: 100%;
         height: 100%;
-        background: var(--themeColor, #42b983);
+        background: var(--themeColor, #307fe2);
         border-radius: 50%;
         opacity: .2;
         transform: scale(0);
@@ -89,7 +88,7 @@
     }
 
     #radio:checked+label .cheked {
-        border-color: var(--themeColor, #42b983);
+        border-color: var(--themeColor, #307fe2);
     }
 </style>
 <input type="checkbox" id="radio" />
