--- a/components/awc-message/awc-message.html
+++ b/components/awc-message/awc-message.html
@@ -19,12 +19,12 @@
         margin-top: 10px;
         align-items: center;
         font-size: 14px;
-        color: var(--fontColor);
-        background: var(--colorWhite);
+        color: var(--font-color, #333333);
+        background: var(--color-white, #FFF);
         border-radius: 3px;
         transform: translateY(-100%);
         transition: .3s transform cubic-bezier(.645, .045, .355, 1);
-        box-shadow: 0 4px 12px var(--boxShadow);
+        box-shadow: 0 4px 12px var(--box-shadow, rgba(0, 0, 0, .3));
         pointer-events: all;
     }
 
@@ -49,7 +49,7 @@
     }
 
     :host awc-icon {
-        color: var(--themeColor, #307fe2);
+        color: var(--theme-color, #307fe2);
     }
 </style>
 <div class="message">
