--- a/components/awc-option/awc-option.html
+++ b/components/awc-option/awc-option.html
@@ -16,7 +16,7 @@
     }
 
     :host([selected]) .option {
-        color: var(--themeColor, #307fe2)
+        color: var(--theme-color, #307fe2)
     }
 </style>
 <awc-button id="option" class="option" type="text">
