--- a/components/awc-popover/awc-popbody.html
+++ b/components/awc-popover/awc-popbody.html
@@ -2,7 +2,7 @@
     :host {
         position: absolute;
         display: flex;
-        box-shadow: 2px 2px 15px var(--boxShadow, rgba(0, 0, 0, 0.15));
+        box-shadow: 2px 2px 15px var(--box-shadow, rgba(0, 0, 0, 0.15));
         box-sizing: border-box;
         transform: scale(0);
         opacity: 0.5;
@@ -10,7 +10,7 @@
         z-index: 10;
         transition: .3s cubic-bezier(.645, .045, .355, 1);
         transform-origin: inherit;
-        background: var(--colorWhite);
+        background: var(--color-white, #FFF);
         visibility: hidden;
     }
 
@@ -27,8 +27,8 @@
         line-height: 30px;
         padding: 15px 30px 0 0;
         font-weight: 700;
-        font-size: var(--fontSize14);
-        color: var(--fontColor);
+        font-size: var(--font-size-14, 14px);
+        color: var(--font-color, #333333);
         user-select: none;
         cursor: default;
     }
