--- a/components/awc-checkbox/awc-checkbox.html
+++ b/components/awc-checkbox/awc-checkbox.html
@@ -2,7 +2,7 @@
     :host {
         display: inline-block;
         font-size: 14px;
-        color: var(--fontColor, #333);
+        color: var(--font-color, #333333);
         -webkit-tap-highlight-color: transparent;
     }
 
@@ -23,7 +23,7 @@
 
     :host(:focus-within) .cheked,
     :host(:not([disabled])) label:hover .cheked {
-        border-color: var(--themeColor);
+        border-color: var(--theme-color, #307fe2);
         z-index: 1;
     }
 
@@ -33,7 +33,7 @@
     }
 
     :host([disabled]) .cheked {
-        background: var(--disabledColor);
+        background: var(--disabled-color, rgba(0, 0, 0, .1));
     }
 
     label {
@@ -47,12 +47,12 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-right: var(--em-50);
+        margin-right: var(--em-50, .5em);
         position: relative;
         width: 1em;
         height: 1em;
-        border: 1px solid var(--borderColor, rgba(0, 0, 0, .2));
-        border-radius: var(--em-125);
+        border: 1px solid var(--border-color, rgba(0, 0, 0, .2));
+        border-radius: var(--em-125, .125em);
         text-align: initial;
         transition: .3s;
     }
@@ -65,10 +65,10 @@
         position: absolute;
         content: '';
         width: 74%;
-        height: var(--em-125);
-        background: var(--colorWhite);
+        height: var(--em-125, .125em);
+        background: var(--color-white, #FFF);
         transform: scale(0);
-        border-radius: var(--em-125);
+        border-radius: var(--em-125, .125em);
         transition: .2s cubic-bezier(.12, .4, .29, 1.46) .1s;
     }
 
@@ -77,7 +77,7 @@
         content: '';
         width: 100%;
         height: 100%;
-        background: var(--themeColor);
+        background: var(--theme-color, #307fe2);
         border-radius: 50%;
         opacity: .2;
         transform: scale(0);
@@ -102,7 +102,7 @@
     #checkbox:checked+label .cheked,
     #checkbox:indeterminate+label .cheked {
         border-color: transparent;
-        background-color: var(--themeColor);
+        background-color: var(--theme-color, #307fe2);
     }
 
     #checkbox:indeterminate+label .cheked::before {
