--- a/components/awc-radio/awc-radio.html
+++ b/components/awc-radio/awc-radio.html
@@ -2,7 +2,7 @@
     :host {
         display: inline-block;
         font-size: 14px;
-        color: var(--fontColor, #333);
+        color: var(--font-color, #333333);
         -webkit-tap-highlight-color: transparent;
     }
 
@@ -23,7 +23,7 @@
 
     :host(:focus-within) .cheked,
     :host(:not([disabled])) label:hover .cheked {
-        border-color: var(--themeColor, #307fe2);
+        border-color: var(--theme-color, #307fe2);
         z-index: 1;
     }
 
@@ -46,7 +46,7 @@
         height: 16px;
         display: flex;
         border-radius: 50%;
-        border: 1px solid var(--borderColor, rgba(0, 0, 0, .2));
+        border: 1px solid var(--border-color, rgba(0, 0, 0, .2));
         transition: .3s;
         margin-right: .5em;
     }
@@ -61,7 +61,7 @@
         height: 8px;
         margin: auto;
         border-radius: 50%;
-        background: var(--themeColor, #307fe2);
+        background: var(--theme-color, #307fe2);
         transform: scale(0);
         transition: .2s cubic-bezier(.12, .4, .29, 1.46) .1s;
     }
@@ -71,7 +71,7 @@
         content: '';
         width: 100%;
         height: 100%;
-        background: var(--themeColor, #307fe2);
+        background: var(--theme-color, #307fe2);
         border-radius: 50%;
         opacity: .2;
         transform: scale(0);
@@ -88,7 +88,7 @@
     }
 
     #radio:checked+label .cheked {
-        border-color: var(--themeColor, #307fe2);
+        border-color: var(--theme-color, #307fe2);
     }
 </style>
 <input type="checkbox" id="radio" />
