--- a/components/awc-switch/awc-switch.html
+++ b/components/awc-switch/awc-switch.html
@@ -21,7 +21,7 @@
 
     :host(:focus-within) label::after,
     :host(:active) ::after {
-        background: var(--themeColor, #307fe2);
+        background: var(--theme-color, #307fe2);
     }
 
     :host(:focus-within) #switch,
@@ -36,7 +36,7 @@
         height: 1.2em;
         padding: .125em;
         border-radius: 1.2em;
-        background: var(--grayColor);
+        background: var(--gray-color, #EEE);
         transition: .3s width, .3s height, .3s background-color;
     }
 
@@ -51,8 +51,8 @@
         width: .4em;
         height: .4em;
         border-radius: 1.2em;
-        border: .4em solid var(--colorWhite);
-        background: var(--colorWhite);
+        border: .4em solid var(--color-white, #FFF);
+        background: var(--color-white, #FFF);
         transition: .3s background, .3s padding, .3s width, .3s height, .3s border-radius, .3s border;
         box-shadow: 0 2px 4px 0 rgba(0, 35, 11, 0.2);
     }
@@ -62,7 +62,7 @@
     }
 
     #switch:checked+label {
-        background: var(--themeColor, #307fe2);
+        background: var(--theme-color, #307fe2);
     }
 
     #switch:checked+label::before {
